# esade-quant-appendix

./: .gitignore  README.md  config.yaml  pyproject.toml
artifacts/experiments/wide20_8h_dual/: bar_frequency_screen.csv  holdout_test_evaluation.csv  selection_leaderboard.csv  selection_leaderboard.json
artifacts/models/wide20_8h_dual/: catboost_reg.joblib  catboost_reg_info.json
artifacts/results/wide20_8h_dual/: benchmark_vs_sp500.csv  production_manifest.json  production_summary.csv  test_catboost_reg_bars.parquet  validation_catboost_reg_bars.parquet
data/raw/benchmark/: SPX_daily.csv
data/raw/funding/: AAVEUSDT_funding.parquet  ADAUSDT_funding.parquet  ATOMUSDT_funding.parquet  AVAXUSDT_funding.parquet  BCHUSDT_funding.parquet  BNBUSDT_funding.parquet  BTCUSDT_funding.parquet  DASHUSDT_funding.parquet  DOGEUSDT_funding.parquet  DOTUSDT_funding.parquet  ETHUSDT_funding.parquet  FILUSDT_funding.parquet  LINKUSDT_funding.parquet  LTCUSDT_funding.parquet  NEARUSDT_funding.parquet  SOLUSDT_funding.parquet  TRXUSDT_funding.parquet  UNIUSDT_funding.parquet  XRPUSDT_funding.parquet  ZECUSDT_funding.parquet
data/raw/ohlcv/: AAVEUSDT_1h.parquet  AAVEUSDT_8h.parquet  ADAUSDT_8h.parquet  ATOMUSDT_1h.parquet  ATOMUSDT_8h.parquet  AVAXUSDT_1h.parquet  AVAXUSDT_8h.parquet  BCHUSDT_1h.parquet  BCHUSDT_8h.parquet  BNBUSDT_8h.parquet  BTCUSDT_8h.parquet  DASHUSDT_1h.parquet  DASHUSDT_8h.parquet  DOGEUSDT_8h.parquet  DOTUSDT_1h.parquet  DOTUSDT_8h.parquet  (+16 more)
notebooks/: ESADE_quant_appendix.ipynb
src/dual8h/: __main__.py  cadence.py  config.py  io_utils.py  report.py
(+39 files in other folders)
