[project]
name = "binance-8h-dual-standalone"
version = "1.0.0"
description = "Self-contained wide20_8h_dual: Binance ingest, 8h panel, CatBoost + carry production"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pyarrow>=15",
    "scikit-learn>=1.4",
    "joblib>=1.4",
    "httpx>=0.27",
    "PyYAML>=6",
    "catboost>=1.2",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
notebook = ["jupyter>=1.0", "ipykernel>=6", "matplotlib>=3.8"]
deck = ["python-pptx>=1.0", "comtypes>=1.4; sys_platform == 'win32'"]

[project.scripts]
dual8h = "dual8h.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
